feat(test): parse as c++ source
All included headers are fully safe to be parsed as C++, so these unit
tests can now use C++. Rename them to `.cc' files and use a few c++
keywords to enforce that the compiler is actually treating them as such.
Actual C++ cleanups to follow later, hopefully alongside a unit test
framework like gtest or catch2.

Signed-off-by: Nicholas Sielicki <nslick@amazon.com>

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -9,7 +9,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include
 AM_CPPFLAGS += -isystem $(abs_top_srcdir)/3rd-party/nccl/$(DEVICE_INTERFACE)/include
 AM_CPPFLAGS += -isystem $(abs_top_srcdir)/3rd-party/uthash/include
 LDADD = $(top_builddir)/src/libinternal_net_plugin.la
-noinst_HEADERS = test-common.h
+noinst_HEADERS = test-common.hpp
 
 noinst_PROGRAMS = \
 	deque \
@@ -26,7 +26,7 @@ if WANT_PLATFORM_AWS
   AM_CPPFLAGS += $(CUDA_CPPFLAGS)
   LDADD += $(CUDA_LIBS)
   noinst_PROGRAMS += show_tuner_decisions
-  show_tuner_decisions_SOURCES = show_tuner_decisions.c
+  show_tuner_decisions_SOURCES = show_tuner_decisions.cc
   show_tuner_decisions_LDADD = $(top_builddir)/src/libinternal_tuner_plugin.la
   noinst_PROGRAMS += region_based_tuner
   region_based_tuner_SOURCES = region_based_tuner.c
@@ -34,13 +34,13 @@ if WANT_PLATFORM_AWS
 endif
 endif
 
-idpool_SOURCES = idpool.c
-deque_SOURCES = deque.c
-freelist_SOURCES = freelist.c
-msgbuff_SOURCES = msgbuff.c
-scheduler_SOURCES = scheduler.c
-ep_addr_list_SOURCES = ep_addr_list.c
-mr_SOURCES = mr.c
+idpool_SOURCES = idpool.cc
+deque_SOURCES = deque.cc
+freelist_SOURCES = freelist.cc
+msgbuff_SOURCES = msgbuff.cc
+scheduler_SOURCES = scheduler.cc
+ep_addr_list_SOURCES = ep_addr_list.cc
+mr_SOURCES = mr.cc
 
 TESTS = $(noinst_PROGRAMS)
 endif
