tmp: add all the warnings
Signed-off-by: Nicholas Sielicki <nslick@amazon.com>

--- a/configure.ac
+++ b/configure.ac
@@ -237,6 +237,51 @@ dnl use 123.456L for a double, use 123.456f for a float, and don't allow it to
 dnl be ambiguous.
 ADD_PICKY_FLAGS([-Wunsuffixed-float-constants])
 
+ADD_PICKY_FLAGS([-Waddress])
+ADD_PICKY_FLAGS([-Walloca-larger-than=128])
+ADD_PICKY_FLAGS([-Warith-conversion])
+ADD_PICKY_FLAGS([-Warray-bounds=2])
+ADD_PICKY_FLAGS([-Warray-compare])
+ADD_PICKY_FLAGS([-Wattribute-alias=2])
+ADD_PICKY_FLAGS([-Wc++20compat])
+ADD_PICKY_FLAGS([-Wcast-align])
+ADD_PICKY_FLAGS([-Wcast-qual])
+ADD_PICKY_FLAGS([-Wdangling-pointer])
+
+ADD_PICKY_FLAGS([-Wduplicated-cond])
+ADD_PICKY_FLAGS([-Wformat=2])
+ADD_PICKY_FLAGS([-Winit-self])
+ADD_PICKY_FLAGS([-Wlogical-op])
+ADD_PICKY_FLAGS([-Wmaybe-uninitialized])
+ADD_PICKY_FLAGS([-Wmisleading-indentation])
+ADD_PICKY_FLAGS([-Wmissing-attributes])
+ADD_PICKY_FLAGS([-Wmissing-braces])
+ADD_PICKY_FLAGS([-Wnonnull])
+ADD_PICKY_FLAGS([-Wnull-dereference])
+ADD_PICKY_FLAGS([-Wparentheses])
+ADD_PICKY_FLAGS([-Wpointer-sign])
+ADD_PICKY_FLAGS([-Wshadow])
+ADD_PICKY_FLAGS([-Wstrict-flex-arrays=3])
+ADD_PICKY_FLAGS([-Wstrict-overflow=5])
+ADD_PICKY_FLAGS([-Wstring-compare])
+ADD_PICKY_FLAGS([-Wstringop-overflow=4])
+ADD_PICKY_FLAGS([-Wsuggest-attribute=cold])
+ADD_PICKY_FLAGS([-Wsuggest-attribute=const])
+ADD_PICKY_FLAGS([-Wsuggest-attribute=malloc])
+ADD_PICKY_FLAGS([-Wsuggest-attribute=noreturn])
+ADD_PICKY_FLAGS([-Wsuggest-attribute=returns_nonnull])
+ADD_PICKY_FLAGS([-Wundef])
+ADD_PICKY_FLAGS([-Wuninitialized])
+ADD_PICKY_FLAGS([-Wunreachable-code])
+ADD_PICKY_FLAGS([-Wunused-but-set-parameter])
+ADD_PICKY_FLAGS([-Wunused-function])
+ADD_PICKY_FLAGS([-Wunused-const-variable=2])
+ADD_PICKY_FLAGS([-Wuse-after-free=2])
+
+dnl todo
+dnl ADD_PICKY_FLAGS([-Wduplicated-branches])
+dnl ADD_PICKY_FLAGS([-Wuseless-cast])
+
 AC_ARG_ENABLE([picky-compiler],
    [AS_HELP_STRING([--disable-picky-compiler], [Disable adding picky compiler flags.])])
 AS_IF([test "${enable_picky_compiler}" != "no"],
