feat(build): Add full C++ build mode
Rather than relying on -Wc++-compat, add a full build flag that uses all
CXXFLAGS and parses the source truly as C++.

Signed-off-by: Nicholas Sielicki <nslick@amazon.com>

--- a/.github/workflows/distcheck.yaml
+++ b/.github/workflows/distcheck.yaml
@@ -110,6 +110,7 @@ jobs:
                         --enable-tests=yes \
                         --enable-werror=yes \
                         --enable-picky-compiler=yes \
+                        --enable-cxx=${{ matrix.mode == 'cxx' && 'yes' || 'no' }} \
                         --enable-platform-aws \
                         --enable-neuron
           else
@@ -118,6 +119,7 @@ jobs:
                         --enable-tests=yes \
                         --enable-werror=yes \
                         --enable-picky-compiler=yes \
+                        --enable-cxx=${{ matrix.mode == 'cxx' && 'yes' || 'no' }} \
                         --enable-platform-aws \
                         --with-cuda=/usr/local/cuda/
           fi
@@ -144,6 +146,9 @@ jobs:
         cc:
           - gcc
           - clang
+        mode:
+          - cxx
+          - c
         tracing:
           - lttng
           - none
@@ -159,7 +164,7 @@ jobs:
             cc: gcc
             cc-version: 13
 
-    name: u2204/${{ matrix.sdk }}/${{matrix.cc}}-${{matrix.cc-variant}}/build+test
+    name: u2204/${{ matrix.sdk }}/${{matrix.cc}}-${{matrix.cc-variant}}/build+test(${{ matrix.mode }})
     steps:
       - uses: actions/checkout@v4
 
@@ -237,6 +242,7 @@ jobs:
                         --enable-tests=yes \
                         --enable-werror=yes \
                         --enable-picky-compiler=yes \
+                        --enable-cxx=${{ matrix.mode == 'cxx' && 'yes' || 'no' }} \
                         --enable-platform-aws \
                         --enable-neuron
           else
@@ -245,6 +251,7 @@ jobs:
                         --enable-tests=yes \
                         --enable-werror=yes \
                         --enable-picky-compiler=yes \
+                        --enable-cxx=${{ matrix.mode == 'cxx' && 'yes' || 'no' }} \
                         --enable-platform-aws \
                         --with-cuda=/usr/local/cuda/
           fi
@@ -277,7 +284,10 @@ jobs:
         sdk:
           - cuda
           - neuron
-    name: CodeChecker - ${{ matrix.sdk }}
+        mode:
+          - cxx
+          - c
+    name: CodeChecker - ${{ matrix.sdk }} ${{ matrix.mode }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -320,6 +330,7 @@ jobs:
                         --enable-tests=yes \
                         --enable-werror=yes \
                         --enable-picky-compiler=yes \
+                        --enable-cxx=${{ matrix.mode == 'cxx' && 'yes' || 'no' }} \
                         --enable-platform-aws \
                         --enable-neuron
           else
@@ -328,6 +339,7 @@ jobs:
                         --enable-tests=yes \
                         --enable-werror=yes \
                         --enable-picky-compiler=yes \
+                        --enable-cxx=${{ matrix.mode == 'cxx' && 'yes' || 'no' }} \
                         --enable-platform-aws \
                         --with-cuda=/usr/local/cuda/
           fi
@@ -346,7 +358,7 @@ jobs:
       - name: Save CodeChecker HTML output.
         uses: actions/upload-artifact@v4
         with:
-          name: CodeChecker Bug Reports for ${{ matrix.sdk }}
+          name: CodeChecker Bug Reports for ${{ matrix.sdk }} ${{ matrix.mode }}
           path: ${{ steps.codechecker.outputs.result-html-dir }}/*.html
 
       - name: CodeChecker Pass Or Fail?
