support EXTRA_TOP_SUBDIRS

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,8 +4,7 @@
 # See LICENSE.txt for license information
 #
 
-ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = include 3rd-party src topology tests
+SUBDIRS = include 3rd-party src topology tests $(EXTRA_TOP_SUBDIRS)
 EXTRA_DIST = \
 	autogen.sh \
 	CODE_OF_CONDUCT.md \
