--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,6 +14,7 @@ sources = \
 	nccl_ofi_sendrecv.c \
 	nccl_ofi_system.c \
 	nccl_ofi_rdma.c \
+	nccl_ofi_kvstore.cc \
 	nccl_ofi_scheduler.c \
 	nccl_ofi_topo.c \
 	nccl_ofi_mr.c \
