add a bunch of gitignore lines

--- a/.gitignore
+++ b/.gitignore
@@ -8,28 +8,74 @@ libnccl-net.so
 tags
 
 src/tuner/.dirstamp
+src/lib/tuner/.dirstamp
 src/tuner/*.lo
 src/tuner/*.la
+src/lib/tuner/*.lo
+src/lib/tuner/*.la
 
 tests/functional/*.o
 tests/unit/*.o
 tests/unit/*.log
 tests/unit/*.trs
+src/tests/functional/cuda_check
+src/tests/functional/cuda_check
+src/tests/functional/nccl_connection
+src/tests/functional/nccl_connection
+src/tests/functional/nccl_message_transfer
+src/tests/functional/nccl_message_transfer
+src/tests/functional/ring
+src/tests/functional/ring
+src/tests/unit/deque
+src/tests/unit/deque
+src/tests/unit/ep_addr_list
+src/tests/unit/ep_addr_list
+src/tests/unit/freelist
+src/tests/unit/freelist
+src/tests/unit/idpool
+src/tests/unit/idpool
+src/tests/unit/mr
+src/tests/unit/mr
+src/tests/unit/msgbuff
+src/tests/unit/msgbuff
+src/tests/unit/region_based_tuner
+src/tests/unit/region_based_tuner
+src/tests/unit/scheduler
+src/tests/unit/scheduler
+src/tests/unit/show_tuner_costs
+src/tests/unit/show_tuner_costs
+tests/functional/*.o
+tests/functional/cuda_check
+tests/functional/cuda_check
+tests/functional/nccl_connection
 tests/functional/nccl_connection
 tests/functional/nccl_message_transfer
+tests/functional/nccl_message_transfer
 tests/functional/ring
-tests/functional/cuda_check
-tests/unit/msgbuff
-tests/unit/freelist
+tests/functional/ring
+tests/unit/*.log
+tests/unit/*.o
+tests/unit/*.trs
 tests/unit/deque
-tests/unit/scheduler
-tests/unit/idpool
-tests/unit/show_tuner_costs
+tests/unit/deque
 tests/unit/ep_addr_list
+tests/unit/ep_addr_list
+tests/unit/freelist
+tests/unit/freelist
+tests/unit/idpool
+tests/unit/idpool
 tests/unit/mr
+tests/unit/mr
+tests/unit/msgbuff
+tests/unit/msgbuff
 tests/unit/region_based_tuner
 tests/unit/show_tuner_decisions
 tests/unit/aws_platform_mapper
+tests/unit/region_based_tuner
+tests/unit/scheduler
+tests/unit/scheduler
+tests/unit/show_tuner_costs
+tests/unit/show_tuner_costs
 
 # http://www.gnu.org/software/automake
 .deps/
@@ -83,3 +129,29 @@ result-bin
 result
 .ctags.d
 .tags
+cmake-bld
+compile_commands.json
+cmake-build-release/
+cmake-build-debug/
+cmake-build-relwithdebinfo/
+cmake-build-minsizerel/
+.cache/
+.ccls
+.ccls-cache
+.ccls-root
+.clion-build/
+.ctags.d
+.devcontainer.json
+.script.sh
+.tags
+cmake-bld
+cmake-build-debug/
+cmake-build-minsizerel/
+cmake-build-release/
+cmake-build-relwithdebinfo/
+compile_commands.json
+result
+result-bin
+GTAGS
+GRTAGS
+GPATH
