--- a/topology/Makefile.am
+++ b/topology/Makefile.am
@@ -1,3 +1,9 @@
+######################################################################################
+#  Copyright (c) 2018-2023 Amazon.com, Inc. or its affiliates. All rights reserved.  #
+#  Copyright (c) 2015-2018, NVIDIA CORPORATION. All rights reserved.                 #
+#                                                                                    #
+######################################################################################
+
 #
 # Copyright (c) 2020-2023, Amazon.com, Inc. or its affiliates. All rights reserved.
 #
