--- a/configure.ac
+++ b/configure.ac
@@ -8,9 +8,9 @@
 # Initialization
 AC_INIT([aws-ofi-nccl], [GitHub-dev], [al-ofi-nccl-team@amazon.com], , [http://github.com/aws/aws-ofi-nccl])
 AC_PREREQ([2.69])
-AC_CONFIG_SRCDIR([src/nccl_ofi_net.c])
+AC_CONFIG_SRCDIR([src/nccl_ofi_net.cc])
 AC_CONFIG_AUX_DIR([build-aux])
-AC_CONFIG_HEADERS([include/config.h])
+AC_CONFIG_HEADERS([include/config.hh])
 AC_CONFIG_MACRO_DIRS([m4])
 
 AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects tar-pax])
@@ -25,7 +25,7 @@ AH_TOP([/*
 
 ])
 AH_BOTTOM([
-#include "nccl_ofi_config_bottom.h"
+#include "nccl_ofi_config_bottom.hh"
 #endif /* NCCL_OFI_CONFIG_H */
 ])
 
@@ -44,29 +44,23 @@ LT_INIT([shared disable-static pic-only])
 NCCL_NET_OFI_DISTCHCK_CONFIGURE_FLAGS=
 
 # Checks for programs
-AC_PROG_CC
-AM_PROG_CC_C_O
 AC_PROG_CXX
-m4_version_prereq([2.70], [], [AC_PROG_CC_STDC])
-AC_C_INLINE
+m4_version_prereq([2.70], [], [])
 
 dnl ac_check_enable_debug will make sure AC_PROG_CC doesn't add a
 dnl bunch of debugging flags, so there's no ordering requirement
 dnl between this and AC_PROG_CC.
 AS_IF([test "${ax_enable_debug}" = "no"], [
              dnl Enable O3 optimization
-             CFLAGS="${CFLAGS} -O3"
              CXXFLAGS="${CXXFLAGS} -O3"
 
              dnl use C++17, disable exceptions, and disable runtime type information
              CXXFLAGS="-std=c++17 -fno-rtti -fno-exceptions"
 
              dnl dead code elim
-             CFLAGS="${CFLAGS} -ffunction-sections -fdata-sections"
              CXXFLAGS="${CXXFLAGS} -ffunction-sections -fdata-sections"
 
              dnl https://maskray.me/blog/2021-05-09-fno-semantic-interposition
-             CFLAGS="${CFLAGS} -fno-semantic-interposition -fvisibility=hidden"
              CXXFLAGS="${CXXFLAGS} -fno-semantic-interposition -fvisibility=hidden "
              LDFLAGS="${LDFLAGS} -Bsymbolic"
             ])
@@ -184,9 +178,6 @@ AC_DEFINE_UNQUOTED([OFI_NCCL_TRACE], [${trace}], [Defined to 1 unit test output 
 picky_cflags=""
 picky_cxxflags=""
 AC_DEFUN([ADD_PICKY_FLAGS],[
-    AC_LANG_PUSH([C])
-    AX_CHECK_COMPILE_FLAG([$1], [picky_cflags="${picky_cflags} $1"], [], [-Werror])
-    AC_LANG_POP()
 
     AC_LANG_PUSH([C++])
     AX_CHECK_COMPILE_FLAG([$1], [picky_cxxflags="${picky_cxxflags} $1"], [], [-Werror -x c++])
