--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -15,7 +15,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include
 AM_CPPFLAGS += -isystem $(abs_top_srcdir)/3rd-party/nccl/$(DEVICE_INTERFACE)/include
 AM_CPPFLAGS += -isystem $(abs_top_srcdir)/3rd-party/uthash/include
 LDADD = $(top_builddir)/src/libinternal_net_plugin.la
-noinst_HEADERS = test-common.h
+noinst_HEADERS = test-common.hh
 
 noinst_PROGRAMS = \
 	deque \
@@ -36,19 +36,19 @@ if WANT_PLATFORM_AWS
   AM_CPPFLAGS += $(CUDA_CPPFLAGS)
   LDADD += $(CUDA_LIBS)
   noinst_PROGRAMS += region_based_tuner
-  region_based_tuner_SOURCES = region_based_tuner.c
+  region_based_tuner_SOURCES = region_based_tuner.cc
   region_based_tuner_LDADD = $(top_builddir)/src/libinternal_tuner_plugin.la
 endif
 endif
 
-idpool_SOURCES = idpool.c
-deque_SOURCES = deque.c
-freelist_SOURCES = freelist.c
-msgbuff_SOURCES = msgbuff.c
-scheduler_SOURCES = scheduler.c
-ep_addr_list_SOURCES = ep_addr_list.c
-mr_SOURCES = mr.c
-aws_platform_mapper_SOURCES = aws_platform_mapper.c
+idpool_SOURCES = idpool.cc
+deque_SOURCES = deque.cc
+freelist_SOURCES = freelist.cc
+msgbuff_SOURCES = msgbuff.cc
+scheduler_SOURCES = scheduler.cc
+ep_addr_list_SOURCES = ep_addr_list.cc
+mr_SOURCES = mr.cc
+aws_platform_mapper_SOURCES = aws_platform_mapper.cc
 
 TESTS = $(noinst_PROGRAMS)
 endif
