--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -11,13 +11,25 @@
 #
 
 noinst_HEADERS = \
+	concepts.hh \
+	internal/tuner/nccl_defaults.hh \
 	nccl_ofi.hh \
 	nccl_ofi_api.hh \
+	nccl_ofi_comm.hh \
 	nccl_ofi_config_bottom.hh \
+	nccl_ofi_conn_handle.hh \
+	nccl_ofi_connection_info.hh \
 	nccl_ofi_cuda.hh \
 	nccl_ofi_deque.hh \
+	nccl_ofi_device.hh \
+	nccl_ofi_dmabuf.hh \
+	nccl_ofi_domain.hh \
+	nccl_ofi_endpoint.hh \
+	nccl_ofi_endpoint_rail.hh \
+	nccl_ofi_ep_addr_list.hh \
 	nccl_ofi_freelist.hh \
 	nccl_ofi_idpool.hh \
+	nccl_ofi_listen_comm.hh \
 	nccl_ofi_log.hh \
 	nccl_ofi_math.hh \
 	nccl_ofi_memcheck.hh \
@@ -26,24 +38,49 @@ noinst_HEADERS = \
 	nccl_ofi_memcheck_valgrind.hh \
 	nccl_ofi_mr.hh \
 	nccl_ofi_msgbuff.hh \
+	nccl_ofi_ofiutils.hh \
 	nccl_ofi_param.hh \
+	nccl_ofi_platform.hh \
+	nccl_ofi_plugin.hh \
+	nccl_ofi_properties.hh \
 	nccl_ofi_pthread.hh \
-	nccl_ofi_rdma.hh \
-	concepts.hh \
-	nccl_ofi_sendrecv.hh \
+	nccl_ofi_rdma_close_message.hh \
+	nccl_ofi_rdma_connection_info.hh \
+	nccl_ofi_rdma_constants.hh \
+	nccl_ofi_rdma_ctrl_msg.hh \
+	nccl_ofi_rdma_device.hh \
+	nccl_ofi_rdma_domain.hh \
+	nccl_ofi_rdma_eager_copy_data.hh \
+	nccl_ofi_rdma_endpoint.hh \
+	nccl_ofi_rdma_endpoint_name.hh \
+	nccl_ofi_rdma_flush_data.hh \
+	nccl_ofi_rdma_listen_comm.hh \
+	nccl_ofi_rdma_message_type.hh \
+	nccl_ofi_rdma_mr_handle.hh \
+	nccl_ofi_rdma_op_data.hh \
+	nccl_ofi_rdma_plugin.hh \
+	nccl_ofi_rdma_recv_comm.hh \
+	nccl_ofi_rdma_recv_data.hh \
+	nccl_ofi_rdma_recv_segms_data.hh \
+	nccl_ofi_rdma_req.hh \
+	nccl_ofi_rdma_req_rx_buff_data.hh \
+	nccl_ofi_rdma_send_close_data.hh \
+	nccl_ofi_rdma_send_comm.hh \
+	nccl_ofi_rdma_send_control_data.hh \
+	nccl_ofi_rdma_send_data.hh \
+	nccl_ofi_recv_comm.hh \
+	nccl_ofi_req.hh \
+	nccl_ofi_save_comm_state.hh \
 	nccl_ofi_scheduler.hh \
+	nccl_ofi_send_comm.hh \
+	nccl_ofi_sendrecv.hh \
 	nccl_ofi_system.hh \
 	nccl_ofi_topo.hh \
-	tuner/nccl_ofi_tuner.hh \
-	tuner/nccl_ofi_tuner_common.hh \
-	tuner/nccl_ofi_tuner_region.hh \
-	tuner/nccl_ofi_tuner_model.hh \
-	nccl_ofi_ofiutils.hh \
-	nccl_ofi_dmabuf.hh \
 	nccl_ofi_tracepoint.hh \
+	platform-aws.hh \
 	tracing_impl/lttng.hh \
 	tracing_impl/nvtx.hh \
-	internal/tuner/nccl_defaults.hh \
-	nccl_ofi_platform.hh \
-	nccl_ofi_ep_addr_list.hh \
-	platform-aws.hh
+	tuner/nccl_ofi_tuner.hh \
+	tuner/nccl_ofi_tuner_common.hh \
+	tuner/nccl_ofi_tuner_model.hh \
+	tuner/nccl_ofi_tuner_region.hh
