update includes for renames

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -11,75 +11,75 @@
 #
 
 noinst_HEADERS = \
+	aon/detail/transport/base/communicator.hh \
+	aon/detail/transport/base/connection_info.hh \
+	aon/detail/transport/base/device.hh \
+	aon/detail/transport/base/domain.hh \
+	aon/detail/transport/base/endpoint.hh \
+	aon/detail/transport/base/listen_communicator.hh \
+	aon/detail/transport/base/plugin.hh \
+	aon/detail/transport/base/recv_communicator.hh \
+	aon/detail/transport/base/request.hh \
+	aon/detail/transport/base/save_comm_state.hh \
+	aon/detail/transport/base/send_communicator.hh \
+	aon/detail/transport/common/dmabuf.hh \
+	aon/detail/transport/common/endpoint_address_list.hh \
+	aon/detail/transport/common/endpoint_rail.hh \
+	aon/detail/transport/common/mr/cache.hh \
+	aon/detail/transport/rdma/close_message.hh \
+	aon/detail/transport/rdma/connection_info.hh \
+	aon/detail/transport/rdma/constants.hh \
+	aon/detail/transport/rdma/control.hh \
+	aon/detail/transport/rdma/device.hh \
+	aon/detail/transport/rdma/domain.hh \
+	aon/detail/transport/rdma/endpoint.hh \
+	aon/detail/transport/rdma/endpoint_name.hh \
+	aon/detail/transport/rdma/listen_communicator.hh \
+	aon/detail/transport/rdma/message_type.hh \
+	aon/detail/transport/rdma/mr_handle.hh \
+	aon/detail/transport/rdma/plugin.hh \
+	aon/detail/transport/rdma/recv_communicator.hh \
+	aon/detail/transport/rdma/reqs/eager_copy.hh \
+	aon/detail/transport/rdma/reqs/flush.hh \
+	aon/detail/transport/rdma/reqs/op.hh \
+	aon/detail/transport/rdma/reqs/recv.hh \
+	aon/detail/transport/rdma/reqs/recv_segms.hh \
+	aon/detail/transport/rdma/reqs/req_rx_buff.hh \
+	aon/detail/transport/rdma/reqs/send.hh \
+	aon/detail/transport/rdma/reqs/send_close.hh \
+	aon/detail/transport/rdma/reqs/send_control.hh \
+	aon/detail/transport/rdma/request.hh \
+	aon/detail/transport/rdma/send_communicator.hh \
+	aon/detail/types/deque.hh \
+	aon/detail/types/freelist.hh \
+	aon/detail/types/idpool.hh \
+	aon/detail/types/msgbuff.hh \
+	aon/detail/util/memcheck.hh \
+	aon/detail/util/memcheck/asan.hh \
+	aon/detail/util/memcheck/nop.hh \
+	aon/detail/util/memcheck/valgrind.hh \
+	aon/detail/util/tracepoint.hh \
+	aon/detail/util/tracepoint/lttng.hh \
+	aon/detail/util/tracepoint/nvtx.hh \
 	concepts.hh \
 	internal/tuner/nccl_defaults.hh \
 	nccl_ofi.hh \
 	nccl_ofi_api.hh \
-	nccl_ofi_comm.hh \
 	nccl_ofi_config_bottom.hh \
 	nccl_ofi_conn_handle.hh \
-	nccl_ofi_connection_info.hh \
 	nccl_ofi_cuda.hh \
-	nccl_ofi_deque.hh \
-	nccl_ofi_device.hh \
-	nccl_ofi_dmabuf.hh \
-	nccl_ofi_domain.hh \
-	nccl_ofi_endpoint.hh \
-	nccl_ofi_endpoint_rail.hh \
-	nccl_ofi_ep_addr_list.hh \
-	nccl_ofi_freelist.hh \
-	nccl_ofi_idpool.hh \
-	nccl_ofi_listen_comm.hh \
 	nccl_ofi_log.hh \
 	nccl_ofi_math.hh \
-	nccl_ofi_memcheck.hh \
-	nccl_ofi_memcheck_asan.hh \
-	nccl_ofi_memcheck_nop.hh \
-	nccl_ofi_memcheck_valgrind.hh \
-	nccl_ofi_mr.hh \
-	nccl_ofi_msgbuff.hh \
 	nccl_ofi_ofiutils.hh \
 	nccl_ofi_param.hh \
 	nccl_ofi_platform.hh \
-	nccl_ofi_plugin.hh \
 	nccl_ofi_properties.hh \
 	nccl_ofi_pthread.hh \
-	nccl_ofi_rdma_close_message.hh \
-	nccl_ofi_rdma_connection_info.hh \
-	nccl_ofi_rdma_constants.hh \
-	nccl_ofi_rdma_ctrl_msg.hh \
-	nccl_ofi_rdma_device.hh \
-	nccl_ofi_rdma_domain.hh \
-	nccl_ofi_rdma_eager_copy_data.hh \
-	nccl_ofi_rdma_endpoint.hh \
-	nccl_ofi_rdma_endpoint_name.hh \
-	nccl_ofi_rdma_flush_data.hh \
-	nccl_ofi_rdma_listen_comm.hh \
-	nccl_ofi_rdma_message_type.hh \
-	nccl_ofi_rdma_mr_handle.hh \
-	nccl_ofi_rdma_op_data.hh \
-	nccl_ofi_rdma_plugin.hh \
-	nccl_ofi_rdma_recv_comm.hh \
-	nccl_ofi_rdma_recv_data.hh \
-	nccl_ofi_rdma_recv_segms_data.hh \
-	nccl_ofi_rdma_req.hh \
-	nccl_ofi_rdma_req_rx_buff_data.hh \
-	nccl_ofi_rdma_send_close_data.hh \
-	nccl_ofi_rdma_send_comm.hh \
-	nccl_ofi_rdma_send_control_data.hh \
-	nccl_ofi_rdma_send_data.hh \
-	nccl_ofi_recv_comm.hh \
-	nccl_ofi_req.hh \
-	nccl_ofi_save_comm_state.hh \
 	nccl_ofi_scheduler.hh \
-	nccl_ofi_send_comm.hh \
 	nccl_ofi_sendrecv.hh \
 	nccl_ofi_system.hh \
 	nccl_ofi_topo.hh \
-	nccl_ofi_tracepoint.hh \
 	platform-aws.hh \
-	tracing_impl/lttng.hh \
-	tracing_impl/nvtx.hh \
 	tuner/nccl_ofi_tuner.hh \
 	tuner/nccl_ofi_tuner_common.hh \
 	tuner/nccl_ofi_tuner_model.hh \
