--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -5,38 +5,38 @@
 #
 
 noinst_HEADERS = \
-	nccl_ofi.h \
-	nccl_ofi_api.h \
-	nccl_ofi_config_bottom.h \
-	nccl_ofi_cuda.h \
-	nccl_ofi_deque.h \
-	nccl_ofi_freelist.h \
-	nccl_ofi_idpool.h \
-	nccl_ofi_log.h \
-	nccl_ofi_math.h \
-	nccl_ofi_memcheck.h \
-	nccl_ofi_memcheck_asan.h \
-	nccl_ofi_memcheck_nop.h \
-	nccl_ofi_memcheck_valgrind.h \
-	nccl_ofi_mr.h \
-	nccl_ofi_msgbuff.h \
-	nccl_ofi_param.h \
-	nccl_ofi_pthread.h \
-	nccl_ofi_rdma.h \
-	nccl_ofi_sendrecv.h \
-	nccl_ofi_scheduler.h \
-	nccl_ofi_system.h \
-	nccl_ofi_topo.h \
-	tuner/nccl_ofi_tuner.h \
-	tuner/nccl_ofi_tuner_common.h \
-	tuner/nccl_ofi_tuner_region.h \
-	tuner/nccl_ofi_tuner_model.h \
-	nccl_ofi_ofiutils.h \
-	nccl_ofi_dmabuf.h \
-	nccl_ofi_tracepoint.h \
-	tracing_impl/lttng.h \
-	tracing_impl/nvtx.h \
-	internal/tuner/nccl_defaults.h \
-	nccl_ofi_platform.h \
-	nccl_ofi_ep_addr_list.h \
-	platform-aws.h
+	nccl_ofi.hh \
+	nccl_ofi_api.hh \
+	nccl_ofi_config_bottom.hh \
+	nccl_ofi_cuda.hh \
+	nccl_ofi_deque.hh \
+	nccl_ofi_freelist.hh \
+	nccl_ofi_idpool.hh \
+	nccl_ofi_log.hh \
+	nccl_ofi_math.hh \
+	nccl_ofi_memcheck.hh \
+	nccl_ofi_memcheck_asan.hh \
+	nccl_ofi_memcheck_nop.hh \
+	nccl_ofi_memcheck_valgrind.hh \
+	nccl_ofi_mr.hh \
+	nccl_ofi_msgbuff.hh \
+	nccl_ofi_param.hh \
+	nccl_ofi_pthread.hh \
+	nccl_ofi_rdma.hh \
+	nccl_ofi_sendrecv.hh \
+	nccl_ofi_scheduler.hh \
+	nccl_ofi_system.hh \
+	nccl_ofi_topo.hh \
+	tuner/nccl_ofi_tuner.hh \
+	tuner/nccl_ofi_tuner_common.hh \
+	tuner/nccl_ofi_tuner_region.hh \
+	tuner/nccl_ofi_tuner_model.hh \
+	nccl_ofi_ofiutils.hh \
+	nccl_ofi_dmabuf.hh \
+	nccl_ofi_tracepoint.hh \
+	tracing_impl/lttng.hh \
+	tracing_impl/nvtx.hh \
+	internal/tuner/nccl_defaults.hh \
+	nccl_ofi_platform.hh \
+	nccl_ofi_ep_addr_list.hh \
+	platform-aws.hh
